# holy-land

./: .gitignore  AGENTS.md  Cargo.toml  README.md  holyland-PLAN.md  holyland-ROADMAP.md
.cargo/: config.toml
cross/: Dockerfile.rust  build-onion.sh  deploy-onion.sh
cross/onion-libs/pkgconfig/: sdl2.pc
cross/onion-pkg/: config.json  launch.sh
obsidian/: Holy Land.md
obsidian/.obsidian/plugins/obsidian-kanban/: data.json
obsidian/Cards/: 16-god roster design.md  Action enum overhaul.md  Action point system.md  Audio system architecture.md  Blessing combo and stacking.md  Blessing system.md  Chunk-based world persistence.md  Combat HUD.md  Combat math foundation.md  Enemy tiered stat blocks.md  FOV and lighting.md  Mana pool scaling.md  Miyoo cross-compile resume.md  Multi-demon expansion.md  Power system.md  Save schema migration testing.md  Skill XP sources.md  Skill system.md  Test Card 2.md  Test Card.md
src/: input.rs  main.rs  render.rs  save.rs  world.rs
src/platform/: android.rs  desktop.rs  linux_handheld.rs  mod.rs
